Fix navbar Item text being cut off

--- a/frontend/src/Components/Navbar/styles/Navbar.sass
+++ b/frontend/src/Components/Navbar/styles/Navbar.sass
@@ -30,7 +30,7 @@ a.navbar-item, a.navbar-item:hover
         justify-content: center
         align-items: center
 
-        padding: 0 20px
+        padding: 0 10px
         transition: 0.5s
 
         &:hover
@@ -40,6 +40,7 @@ a.navbar-item, a.navbar-item:hover
     .navbar-item 
         height: $navbar-height
         cursor: pointer
+        margin: 0 10px
 
         span 
             font-family: "Ubuntu",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif
@@ -90,7 +91,7 @@ a.navbar-item, a.navbar-item:hover
         background: transparent
         padding-left: 10px
         border: none
-        width: 4.2em
+        width: 4.3em
         color: transparent
         cursor: pointer
         transition: all .5s
